log/build_2021-12-04_17-15-54/robotTools/stderr.log
  File "/home/worbots/BasherROSWorkspace/install/robotTools/lib/python3.8/site-packages/robotTools/IMUCovarCalc.py", line 13
    "orientation_pitch" : []
    ^
SyntaxError: invalid syntax

